[package]
name = "promisery"
description = "A JavaScript-inspired, ergonomic, and composable Promise type for Rust, supporting background work, chaining, and error handling with Result."
version = "2.0.0"
edition = "2021"
repository = "https://github.com/Orkking2/rust-promises"
keywords = ["promise", "javascript", "async", "futures", "concurrency"]
categories = ["asynchronous", "concurrency", "data-structures"]
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Nicolas Bird von Eyben <nicolas.bird.voneyben@gmail.com>"]
documentation = "https://docs.rs/promisery"

[dependencies]
oneshot = "0.1.11"

[dev-dependencies]
oneshot = "0.1.11"